translations-methods/lab3/src/main/java/antlr/PrefixExpressionParser.java
package antlr;// Generated from PrefixExpression.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrefixExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, NUMBER=2, PLUS=3, MINUS=4, MUL=5, DIV=6, DEF=7, EQUALS=8, 
		NOT_EQUAL=9, LOWER=10, LOWER_EQUAL=11, HIGHER=12, HIGHER_EQUAL=13, AND=14, 
		OR=15, NOT=16, TRUE=17, FALSE=18, IF=19, PRINT=20, INPUT=21, VARIABLE=22;
	public static final int
		RULE_expression = 0, RULE_expr = 1, RULE_multiExpr = 2, RULE_singleExpr = 3, 
		RULE_ifState = 4, RULE_elseState = 5, RULE_print = 6, RULE_define = 7, 
		RULE_rightValue = 8, RULE_logic = 9, RULE_compareOperation = 10, RULE_logicOperation = 11, 
		RULE_arithmetic = 12, RULE_input = 13, RULE_arithmeticOperation = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "expr", "multiExpr", "singleExpr", "ifState", "elseState", 
			"print", "define", "rightValue", "logic", "compareOperation", "logicOperation", 
			"arithmetic", "input", "arithmeticOperation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'+'", "'-'", "'*'", "'/'", "'='", "'=='", "'!='", 
			"'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'true'", "'false'", 
			"'if'", "'print'", "'input'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "NUMBER", "PLUS", "MINUS", "MUL", "DIV", "DEF", "EQUALS", 
			"NOT_EQUAL", "LOWER", "LOWER_EQUAL", "HIGHER", "HIGHER_EQUAL", "AND", 
			"OR", "NOT", "TRUE", "FALSE", "IF", "PRINT", "INPUT", "VARIABLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrefixExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrefixExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExpressionContext extends ParserRuleContext {
		public String val;
		public ExprContext ex;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((ExpressionContext)_localctx).ex = expr(1);
			((ExpressionContext)_localctx).val =  String.format("if __name__ == '__main__':\n%s", ((ExpressionContext)_localctx).ex.val);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public int tab;
		public String val;
		public SingleExprContext single;
		public MultiExprContext multi;
		public SingleExprContext singleExpr() {
			return getRuleContext(SingleExprContext.class,0);
		}
		public MultiExprContext multiExpr() {
			return getRuleContext(MultiExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr(int tab) throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState(), tab);
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				((ExprContext)_localctx).single = singleExpr(tab);
				((ExprContext)_localctx).val =  ((ExprContext)_localctx).single.val;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				((ExprContext)_localctx).multi = multiExpr(tab);
				((ExprContext)_localctx).val =  ((ExprContext)_localctx).multi.val;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiExprContext extends ParserRuleContext {
		public int tab;
		public String val;
		public SingleExprContext ex;
		public MultiExprContext multi;
		public SingleExprContext singleExpr() {
			return getRuleContext(SingleExprContext.class,0);
		}
		public MultiExprContext multiExpr() {
			return getRuleContext(MultiExprContext.class,0);
		}
		public MultiExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MultiExprContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_multiExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterMultiExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitMultiExpr(this);
		}
	}

	public final MultiExprContext multiExpr(int tab) throws RecognitionException {
		MultiExprContext _localctx = new MultiExprContext(_ctx, getState(), tab);
		enterRule(_localctx, 4, RULE_multiExpr);
		try {
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				((MultiExprContext)_localctx).ex = singleExpr(tab);
				((MultiExprContext)_localctx).val =  ((MultiExprContext)_localctx).ex.val;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((MultiExprContext)_localctx).ex = singleExpr(tab);
				setState(45);
				((MultiExprContext)_localctx).multi = multiExpr(tab);
				((MultiExprContext)_localctx).val =  ((MultiExprContext)_localctx).ex.val + ((MultiExprContext)_localctx).multi.val;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleExprContext extends ParserRuleContext {
		public int tab;
		public String val;
		public IfStateContext ex;
		public PrintContext pr;
		public DefineContext def;
		public IfStateContext ifState() {
			return getRuleContext(IfStateContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public SingleExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SingleExprContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_singleExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterSingleExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitSingleExpr(this);
		}
	}

	public final SingleExprContext singleExpr(int tab) throws RecognitionException {
		SingleExprContext _localctx = new SingleExprContext(_ctx, getState(), tab);
		enterRule(_localctx, 6, RULE_singleExpr);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				((SingleExprContext)_localctx).ex = ifState(tab);
				((SingleExprContext)_localctx).val =  ((SingleExprContext)_localctx).ex.val;
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				((SingleExprContext)_localctx).pr = print(tab);
				((SingleExprContext)_localctx).val =  ((SingleExprContext)_localctx).pr.val + "\n";
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				((SingleExprContext)_localctx).def = define(tab);
				((SingleExprContext)_localctx).val =  ((SingleExprContext)_localctx).def.val + "\n";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStateContext extends ParserRuleContext {
		public int tab;
		public String val;
		public LogicContext l;
		public ExprContext ex;
		public ElseStateContext el;
		public TerminalNode IF() { return getToken(PrefixExpressionParser.IF, 0); }
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ElseStateContext elseState() {
			return getRuleContext(ElseStateContext.class,0);
		}
		public IfStateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public IfStateContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_ifState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterIfState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitIfState(this);
		}
	}

	public final IfStateContext ifState(int tab) throws RecognitionException {
		IfStateContext _localctx = new IfStateContext(_ctx, getState(), tab);
		enterRule(_localctx, 8, RULE_ifState);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(IF);
			setState(62);
			((IfStateContext)_localctx).l = logic();
			setState(63);
			((IfStateContext)_localctx).ex = expr(tab+1);
			setState(64);
			((IfStateContext)_localctx).el = elseState(tab);
			((IfStateContext)_localctx).val =  String.format("%sif %s:\n%s%s", "    ".repeat(_localctx.tab), ((IfStateContext)_localctx).l.val, ((IfStateContext)_localctx).ex.val, ((IfStateContext)_localctx).el.val);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseStateContext extends ParserRuleContext {
		public int tab;
		public String val;
		public ExprContext ex;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ElseStateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ElseStateContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_elseState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterElseState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitElseState(this);
		}
	}

	public final ElseStateContext elseState(int tab) throws RecognitionException {
		ElseStateContext _localctx = new ElseStateContext(_ctx, getState(), tab);
		enterRule(_localctx, 10, RULE_elseState);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				((ElseStateContext)_localctx).ex = expr(tab+1);
				((ElseStateContext)_localctx).val =  String.format("%selse:\n%s", "    ".repeat(_localctx.tab), ((ElseStateContext)_localctx).ex.val);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((ElseStateContext)_localctx).val =  "";
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public int tab;
		public String val;
		public RightValueContext v;
		public TerminalNode PRINT() { return getToken(PrefixExpressionParser.PRINT, 0); }
		public RightValueContext rightValue() {
			return getRuleContext(RightValueContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PrintContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print(int tab) throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState(), tab);
		enterRule(_localctx, 12, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(PRINT);
			setState(74);
			((PrintContext)_localctx).v = rightValue();
			((PrintContext)_localctx).val =  String.format("%sprint(%s)", "    ".repeat(_localctx.tab), ((PrintContext)_localctx).v.val);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public int tab;
		public String val;
		public Token var;
		public RightValueContext v;
		public TerminalNode DEF() { return getToken(PrefixExpressionParser.DEF, 0); }
		public TerminalNode VARIABLE() { return getToken(PrefixExpressionParser.VARIABLE, 0); }
		public RightValueContext rightValue() {
			return getRuleContext(RightValueContext.class,0);
		}
		public DefineContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DefineContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitDefine(this);
		}
	}

	public final DefineContext define(int tab) throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState(), tab);
		enterRule(_localctx, 14, RULE_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(DEF);
			setState(78);
			((DefineContext)_localctx).var = match(VARIABLE);
			setState(79);
			((DefineContext)_localctx).v = rightValue();
			((DefineContext)_localctx).val =  String.format("%s%s = %s", "    ".repeat(_localctx.tab), (((DefineContext)_localctx).var!=null?((DefineContext)_localctx).var.getText():null), ((DefineContext)_localctx).v.val);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightValueContext extends ParserRuleContext {
		public String val;
		public ArithmeticContext ar;
		public LogicContext l;
		public InputContext inp;
		public Token var;
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(PrefixExpressionParser.VARIABLE, 0); }
		public RightValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterRightValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitRightValue(this);
		}
	}

	public final RightValueContext rightValue() throws RecognitionException {
		RightValueContext _localctx = new RightValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rightValue);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				((RightValueContext)_localctx).ar = arithmetic();
				((RightValueContext)_localctx).val =  ((RightValueContext)_localctx).ar.val;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				((RightValueContext)_localctx).l = logic();
				((RightValueContext)_localctx).val =  ((RightValueContext)_localctx).l.val;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				((RightValueContext)_localctx).inp = input();
				((RightValueContext)_localctx).val =  ((RightValueContext)_localctx).inp.val;
				setState(90);
				((RightValueContext)_localctx).var = match(VARIABLE);
				((RightValueContext)_localctx).val =  (((RightValueContext)_localctx).var!=null?((RightValueContext)_localctx).var.getText():null);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicContext extends ParserRuleContext {
		public String val;
		public CompareOperationContext op;
		public ArithmeticContext left;
		public ArithmeticContext right;
		public LogicContext value;
		public LogicOperationContext op_l;
		public LogicContext left_l;
		public LogicContext right_l;
		public CompareOperationContext compareOperation() {
			return getRuleContext(CompareOperationContext.class,0);
		}
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode NOT() { return getToken(PrefixExpressionParser.NOT, 0); }
		public List<LogicContext> logic() {
			return getRuleContexts(LogicContext.class);
		}
		public LogicContext logic(int i) {
			return getRuleContext(LogicContext.class,i);
		}
		public TerminalNode TRUE() { return getToken(PrefixExpressionParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(PrefixExpressionParser.FALSE, 0); }
		public LogicOperationContext logicOperation() {
			return getRuleContext(LogicOperationContext.class,0);
		}
		public LogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitLogic(this);
		}
	}

	public final LogicContext logic() throws RecognitionException {
		LogicContext _localctx = new LogicContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_logic);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUALS:
			case NOT_EQUAL:
			case LOWER:
			case LOWER_EQUAL:
			case HIGHER:
			case HIGHER_EQUAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				((LogicContext)_localctx).op = compareOperation();
				setState(96);
				((LogicContext)_localctx).left = arithmetic();
				setState(97);
				((LogicContext)_localctx).right = arithmetic();
				((LogicContext)_localctx).val =  String.format("(%s %s %s)", ((LogicContext)_localctx).left.val, ((LogicContext)_localctx).op.op, ((LogicContext)_localctx).right.val);
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(NOT);
				setState(101);
				((LogicContext)_localctx).value = logic();
				((LogicContext)_localctx).val =  String.format("not %s", ((LogicContext)_localctx).value.val);
				}
				break;
			case TRUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(TRUE);
				((LogicContext)_localctx).val =  "True";
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				match(FALSE);
				((LogicContext)_localctx).val =  "False";
				}
				break;
			case AND:
			case OR:
				enterOuterAlt(_localctx, 5);
				{
				setState(108);
				((LogicContext)_localctx).op_l = logicOperation();
				setState(109);
				((LogicContext)_localctx).left_l = logic();
				setState(110);
				((LogicContext)_localctx).right_l = logic();
				((LogicContext)_localctx).val =  String.format("(%s %s %s)", ((LogicContext)_localctx).left_l.val, ((LogicContext)_localctx).op_l.op, ((LogicContext)_localctx).right_l.val);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareOperationContext extends ParserRuleContext {
		public String op;
		public TerminalNode EQUALS() { return getToken(PrefixExpressionParser.EQUALS, 0); }
		public TerminalNode NOT_EQUAL() { return getToken(PrefixExpressionParser.NOT_EQUAL, 0); }
		public TerminalNode LOWER() { return getToken(PrefixExpressionParser.LOWER, 0); }
		public TerminalNode LOWER_EQUAL() { return getToken(PrefixExpressionParser.LOWER_EQUAL, 0); }
		public TerminalNode HIGHER() { return getToken(PrefixExpressionParser.HIGHER, 0); }
		public TerminalNode HIGHER_EQUAL() { return getToken(PrefixExpressionParser.HIGHER_EQUAL, 0); }
		public CompareOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterCompareOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitCompareOperation(this);
		}
	}

	public final CompareOperationContext compareOperation() throws RecognitionException {
		CompareOperationContext _localctx = new CompareOperationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_compareOperation);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUALS:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(EQUALS);
				((CompareOperationContext)_localctx).op =  "==";
				}
				break;
			case NOT_EQUAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(NOT_EQUAL);
				((CompareOperationContext)_localctx).op =  "!=";
				}
				break;
			case LOWER:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(LOWER);
				((CompareOperationContext)_localctx).op =  "<";
				}
				break;
			case LOWER_EQUAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				match(LOWER_EQUAL);
				((CompareOperationContext)_localctx).op =  "<=";
				}
				break;
			case HIGHER:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				match(HIGHER);
				((CompareOperationContext)_localctx).op =  ">";
				}
				break;
			case HIGHER_EQUAL:
				enterOuterAlt(_localctx, 6);
				{
				setState(125);
				match(HIGHER_EQUAL);
				((CompareOperationContext)_localctx).op =  ">=";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicOperationContext extends ParserRuleContext {
		public String op;
		public TerminalNode AND() { return getToken(PrefixExpressionParser.AND, 0); }
		public TerminalNode OR() { return getToken(PrefixExpressionParser.OR, 0); }
		public LogicOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterLogicOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitLogicOperation(this);
		}
	}

	public final LogicOperationContext logicOperation() throws RecognitionException {
		LogicOperationContext _localctx = new LogicOperationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_logicOperation);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AND:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(AND);
				((LogicOperationContext)_localctx).op =  "and";
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(OR);
				((LogicOperationContext)_localctx).op =  "or";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
